--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>My Portfolio</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eius, nesciunt et consectetur dignissimos reiciendis ab quod provident aperiam veritatis!
+    </p>
 </body>
 </html>
